{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 125,
  "lineage": "9bb1483e-9b1d-644d-dd6d-2f21b08712bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f555bf2f102b63c",
            "arn": "arn:aws:ec2:us-east-1:009160028299:instance/i-0da09da11e6c8119f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da09da11e6c8119f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fc1c6c59a9fb14d3",
            "private_dns": "ip-10-0-1-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_dns": "ec2-54-174-150-121.compute-1.amazonaws.com",
            "public_ip": "54.174.150.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ed52789987731c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec70c6064568c3e6",
            "tags": {
              "Environment": "Test",
              "Name": "My EC2 Instance"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "My EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ece52d5a5922dfb"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:internet-gateway/igw-0f782da743f69b03e",
            "id": "igw-0f782da743f69b03e",
            "owner_id": "009160028299",
            "tags": {
              "Environment": "Test",
              "Name": "MyIGW"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-091ece7e654885980"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:route-table/rtb-04110e6e86336079f",
            "id": "rtb-04110e6e86336079f",
            "owner_id": "009160028299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f782da743f69b03e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-091ece7e654885980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8e9b74f3e77dd65",
            "route_table_id": "rtb-04110e6e86336079f",
            "subnet_id": "subnet-0ec70c6064568c3e6"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:security-group/sg-05ece52d5a5922dfb",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ece52d5a5922dfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "009160028299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "EC2 Security Group"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "EC2 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-091ece7e654885980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:security-group/sg-08e56bda8df69d819",
            "description": "Security group for RDS instances",
            "egress": [],
            "id": "sg-08e56bda8df69d819",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ece52d5a5922dfb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "009160028299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-091ece7e654885980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:subnet/subnet-0380fa7735059b83e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0380fa7735059b83e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160028299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-091ece7e654885980"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:subnet/subnet-0ec70c6064568c3e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec70c6064568c3e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160028299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-091ece7e654885980"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:009160028299:vpc/vpc-091ece7e654885980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041c138480297db34",
            "default_route_table_id": "rtb-0ecd99a5a925a5b15",
            "default_security_group_id": "sg-081c8c725d0681b39",
            "dhcp_options_id": "dopt-00f6ffbd557208d2c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091ece7e654885980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecd99a5a925a5b15",
            "owner_id": "009160028299",
            "tags": {
              "Environment": "Test",
              "Name": "MyVPC"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}